Fixed mis-alignment of icon on navbar

--- a/parkingApp.css
+++ b/parkingApp.css
@@ -2,16 +2,11 @@ body {
 	background:url("http://www.next51.net/photo/art/grande/7290939-11210380.jpg?v=1419257653");
 	background-size: cover;
 	background-position: center;
-	color: #708090; 
-    font-family: Lato;
+	color: whitesmoke;
+    font-family: "Arial Rounded MT Bold";
 }
 .navbar-inverse {
-	opacity: 0.8;
-}
-
-.material-icons {
-
-	color: red;
+	opacity: 0.85;
 }
 
 #content {
@@ -27,16 +22,12 @@ html {
 }
 
 h1 {
-	font-weight: 700;
+	font-weight: 800;
 	font-size: 5em;
-}k
+}
 
 hr {
 	width: 400px;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2)
-}
-
-#car-logo {
-    margin-right: 10px;
 }
